# gemma3-playground

./: .gitignore  README.md  chat_cli.py  gemma3.py  ingest.py  main.py  pyproject.toml
docs/: README.md  getting_started.md  ingestion.md  retrieval.md  roadmap.md  vectorization.md
ld/: answer.py  chat_cli.py  vectorize.py  workflow.py
